force-app/src/objects/TR1__AtsConversion__mdt.object
<CustomObject>
    <description>Metadata providing customization options for the migration of ATSv1 records to ATSv2 data model</description>
    <fields>
        <fullName>TR1__v1Field__c</fullName>
        <inlineHelpText>Enter API name of ATSv1 field to get the data from</inlineHelpText>
        <label>ATSv1 Source field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__v1Object__c</fullName>
        <inlineHelpText>ATSv1 object to get the data from.Values:Application/Submittal/Send Out/Offer. Or SendoutSchedule for overrides on schedules</inlineHelpText>
        <label>ATSv1 Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                    <default>true</default>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send_Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>SendoutSchedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__v2Field__c</fullName>
        <inlineHelpText>Enter API name of ATSv2 field you want to give an overridden value</inlineHelpText>
        <label>ATSv2 Destination field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__v2Skip__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If enabled, no data will be migrated into ATSv2 Destination field. It will be empty.</inlineHelpText>
        <label>ATSv2 Skip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__v2Stage__c</fullName>
        <inlineHelpText>Used to configure overrides for fields at different stages.</inlineHelpText>
        <label>ATSv2 Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                    <default>true</default>
                    <label>Application</label>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing Report</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__v2value__c</fullName>
        <inlineHelpText>If you want the ATSv2 Destination field to be populated with a default value, enter the value here</inlineHelpText>
        <label>ATSv2 Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ATSv1 Migration</label>
    <pluralLabel>ATSv1 Migrations</pluralLabel>
</CustomObject>